version 1.0.2.018 stable, various improvements, reset button in the GUI properly deletes the cache file, going to rename the button to update. working on getting it to properly save the config changes next.